# NetworkFlow

./: 128_rand_uni_s1_t64_d1_1.sgr  CMakeLists.txt  Common.h  CostScaling.cpp  CostScaling.h  Graph.cpp  Graph.h  LSCS.cpp  LSCS.h  Lemon.h  LocalDominant.cpp  LocalDominant.h  NodeList.h  Readme.md  SCS.cpp  SCS.h  SIA.cpp  SIA.h  TimerTool.cpp  TimerTool.h  adjToGr.cpp  generator.cpp  log.txt  main.cpp  nheap.h  parallel.h  quickSort.h  spatialGenerator.cpp  temp.txt  testing.cpp  utils.h
results/: ASIAsketch_FullBipart.csv  LDA_sparse_bipart.csv  LDfullBipart.csv  LemonSorting32000partialResult.csv  LemonWithSorting_FullBipart.csv  MLCS_3variat_on_uni_rand.csv  MLCS_FullBipart.csv  MLCS_on_uni_rand.csv  MLC_FullBipart.csv  Narrow_FullBipart.csv  OLemon_sparse_bipart.csv  SCS_3var_on_clust.csv  SCS_3variat_on_uni_rand.csv  SCS_on_centrClust.csv  SCSandSIAfill_on_bipart.csv  SIA_old_FullBipart.csv  SIA_sparse_bipart.csv  SIAsimpleFullBipart.csv  SIAvsSIAnew_on_bipart.csv  Wide_FullBipart.csv  blossomResult.csv  blossomResultSparse.csv  compare_MLCS_LCS_SCS-MLCSwithSIArepresent.csv
scripts/: CSonBipart.csv  SIAvsLDAvsDFCSA_on_spatial_bipartite_unirand.csv  compareLCSvsMLCS.sh  compareThreeCostScaling.sh  createTestsBipartite.sh  generateBlossomAnswerSheet.py  generateFullRandomBipartite.sh  generateFullRandomBipartiteSparse.sh  generateLocalRandomSSST.sh  makeResultsFromBlossomOutput.py  plotter.py  pointPlotter.py  runBlossom.sh  runOnFiles.sh  testSpatial.csv
scripts/spatial/: uni_rand.sh
utils/blossom5-v2.05.src/: blossom5
